2007-04-11  Pawel Salek

	* libbalsa/imap/siobuf.c: rename external symbols to avoid
	conflicts with libesmtp.
	
2007-04-10  Johan Brannlund

	* configure.in: detect libnotify.
	* libbalsa/information.c: use it.
	* libbalsa/libbalsa.c: init it.
	* libbalsa/{send,server}.c: downgrade some messages to debug.
	* src/main-window.c: use libnotify for new mail notification.
	* src/balsa-mblist.c: prefer trailing spaces instead of leading ones.
	* libbalsa/imap/imap-handle.c: really disconnect (PS).
	* libbalsa/libbalsa-conf.c: correct CHECK_VERSION (PB).

2007-04-09  Pawel Salek

	* libbalsa/mailbox_imap.c: do not re-try user-aborted actions.
	* libbalsa/libbalsa.[ch]: generalize libbalsa_ask() to implement
	libalsa_abort_on_timeout().
	* libbalsa/imap/imap-handle.c: support for distinguising aborted
	operations from those that timed out.
	* libbalsa/imap/libimap.h: add IME_TIMEOUT event type.
	* libbalsa/imap/imap-handle.h: add imap_handle_op_cancelled().
	* libbalsa/imap/imap_private.h: add op_cancelled field.
	* libbalsa/imap/siobuf.[ch]: core of timeout handling.
	* libbalsa/server.c: ask user what to do on timeout.

2007-04-05  Peter Bloomfield 

	* configure.in: detect gtkhtml-3.14; detect GtkPrint support in
	gtkhtml3; detect GMime version 2.2.5 or later.
	* libbalsa/body.c:
	(libbalsa_message_body_extract_embedded_headers): new GMime api.
	* libbalsa/html.c: don't use Gnome printing api if GtkPrint is
	supported.
	* libbalsa/mailbox_imap.c: new GMime api.
	(internet_address_new_from_imap_address), (lb_set_headers),
	(lbm_imap_construct_body): ditto.
	* libbalsa/message.c: (libbalsa_message_user_hdrs_from_gmime),
	(lbmsg_set_header), (libbalsa_message_set_subject_from_header):
	ditto.
	* src/sendmsg-window.c: ditto.

2007-03-13  Pawel Salek

	* libbalsa/address-entry.c: fix crash reported on balsa-list.

2007-02-26  Pawel Salek

	* libbalsa/mailbox_imap.c: fetch small messages in one shot to get
	rid of one RTT.

2007-02-20  Albrecht Dreß
